--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,3 +1,5 @@
-  env:
-      - variable: NEXT_PUBLIC_ENV
-        value: "apphosting.yaml"
+env:
+  - variable: NEXT_PUBLIC_ENV
+    value: "apphosting.yaml"
+  - variable: NEXT_PUBLIC_SECRET
+    secret: SEC1
